examples/mwaa/cluster/v1beta1/environment-with-airflowconfig.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  annotations:
    uptest.upbound.io/disable-import: "true"
    meta.upbound.io/example-id: mwaa/v1beta1/environment
  labels:
    testing.upbound.io/example-name: example
  name: route
spec:
  forProvider:
    region: us-west-1
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: example-mwaa
    routeTableIdRef:
      name: rta-mwaa
